apps/scrypted/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scrypted
  annotations:
    volsync.backube/privileged-movers: "true"
