apps/scrypted/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrypted-service
  namespace: scrypted
spec:
  type: ClusterIP
  selector:
    app: scrypted
  ports:
  - name: https
    port: 443
    targetPort: 10443
