apps/scrypted/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.kubernetes.io/target: ingress.home.arpa
    external-dns.kubernetes.io/ttl: "60"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app.kubernetes.io/instance: scrypted
    app.kubernetes.io/name: scrypted
    external-dns.invertedorigin.com/enabled: "true"
  name: scrypted
  namespace: scrypted
spec:
  ingressClassName: cilium
  rules:
  - host: scrypted.invertedorigin.com
    http:
      paths:
      - backend:
          service:
            name: scrypted
            port:
              number: 10443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - scrypted.invertedorigin.com
    secretName: scrypted-tls-domain
